logo, menú e icono
hi my love

--- a/index-2.html
+++ b/index-2.html
@@ -4,7 +4,7 @@
     <title>Destinations</title>
     <meta charset="utf-8">
     <meta name = "format-detection" content = "telephone=no" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon_.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/animate.css"/>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
@@ -48,24 +48,24 @@
                     <h1><a href="index.html"><img src="images/logo.png" alt=""/></a></h1>
                     <nav>
                         <ul class="sf-menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="index-1.html">About us</a>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="index-1.html">Nosotros</a>
                                 <ul>
-                                    <li><a href="#">Hotel info</a></li>
-                                    <li><a href="#">History</a>
+                                    <li><a href="#">Información General</a></li>
+                                    <li><a href="#">Historia</a>
                                         <ul>
-                                            <li><a href="#">Nam liber</a></li>
-                                            <li><a href="#">Duisautem</a></li>
-                                            <li><a href="#">Eodemo</a></li>
+                                            <li><a href="#">Comunidad Lacandona</a></li>
+                                            <li><a href="#">Tres Lagunas </a></li>
+                                            <li><a href="#">Selva Lacandona</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Archive</a></li>
+                                    <li><a href="#">Santuario</a></li>
                                 </ul>
                             </li>
-                            <li class="current"><a href="index-2.html">Destinations</a></li>
-                            <li><a href="index-3.html">News</a></li>
-                            <li><a href="index-4.html">Booking</a></li>
-                            <li><a href="index-5.html">Contacts</a></li>
+                            <li class="current"><a href="index-2.html">Actividades</a></li>
+                            <li><a href="index-3.html">Noticias</a></li>
+                            <li><a href="index-4.html">Reservación</a></li>
+                            <li><a href="index-5.html">Contacto</a></li>
                         </ul>
                         <div class="clearfix"></div>
                     </nav>
