--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home</title>
+  <title>Tres Lagunas | Inicio </title>
   <meta charset="utf-8">
   <meta name = "format-detection" content = "telephone=no" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon_.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/camera.css"/>
     <link rel="stylesheet" href="css/owl.carousel.css"/>
     <link rel="stylesheet" href="css/touchTouch.css"/>
@@ -133,29 +133,29 @@
       <div class="container">
         <div class="row">
           <div class="grid_12">
-              <nav>
-                  <ul class="sf-menu">
-                      <li class="current"><a href="index.html">Home</a></li>
-                      <li><a href="index-1.html">About us</a>
-                          <ul>
-                              <li><a href="#">Hotel info</a></li>
-                              <li><a href="#">History</a>
-                                  <ul>
-                                      <li><a href="#">Nam liber</a></li>
-                                      <li><a href="#">Duisautem</a></li>
-                                      <li><a href="#">Eodemo</a></li>
-                                  </ul>
-                              </li>
-                              <li><a href="#">Archive</a></li>
-                          </ul>
-                      </li>
-                      <li><a href="index-2.html">Destinations</a></li>
-                      <li><a href="index-3.html">News</a></li>
-                      <li><a href="index-4.html">Booking</a></li>
-                      <li><a href="index-5.html">Contacts</a></li>
-                  </ul>
-                  <div class="clearfix"></div>
-              </nav>
+       <nav>
+                        <ul class="sf-menu">
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="index-1.html">Nosotros</a>
+                                <ul>
+                                    <li><a href="#">Información General</a></li>
+                                    <li><a href="#">Historia</a>
+                                        <ul>
+                                            <li><a href="#">Comunidad Lacandona</a></li>
+                                            <li><a href="#">Tres Lagunas </a></li>
+                                            <li><a href="#">Selva Lacandona</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Santuario</a></li>
+                                </ul>
+                            </li>
+                            <li class="current"><a href="index-2.html">Actividades</a></li>
+                            <li><a href="index-3.html">Noticias</a></li>
+                            <li><a href="index-4.html">Reservación</a></li>
+                            <li><a href="index-5.html">Contacto</a></li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </nav>
               <form id="search" action="search.php" method="GET" accept-charset="utf-8">
                   <input type="text" name="s" placeholder="Enter word"/>
                   <a onclick="document.getElementById('search').submit()"><div class="search_icon"></div></a>
