--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Tres Lagunas | Inicio </title>
+  <title> Inicio </title>
   <meta charset="utf-8">
   <meta name = "format-detection" content = "telephone=no" />
     <link rel="icon" href="images/favicon_.ico" type="image/x-icon">
