--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
               <div class="row">
                   <div class="grid_12">
                       <div class="h2 wow bounceInUp">
-                          <h2>our news</h2>
-                          <span class="h2_span">Ut wisi enim ad minim veniam, quis nostrud ex</span>
+                          <h2>Nuestras Noticias</h2>
+                          <span class="h2_span">Conoce todo acerca sobre nuestro Santuario </span>
                       </div>
                   </div>
               </div>
