--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <div class="grid_12">
                       <div class="h2 wow bounceInUp">
                           <h2>Nuestras Noticias</h2>
-                          <span class="h2_span">Conoce todo acerca sobre nuestro Santuario </span>
+                          <span class="h2_span">Conoce todo acerca de nuestro Santuario </span>
                       </div>
                   </div>
               </div>
@@ -487,7 +487,7 @@
               <div class="row">
                   <div class="grid_12">
                       <div class="owl_link">
-                        <a class="btn-default" href="#">all photos</a>
+                        <a class="btn-default" href="#">Ver Más</a>
                       </div>
                   </div>
               </div>
@@ -499,11 +499,11 @@
               <div class="row">
                   <div class="grid_12">
                       <div class="h2">
-                          <h2 class="h2__inset1">Travel video</h2>
-                          <span class="h2_span"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore<br>eu feugiat nulla facilisis at vim ven<br>iam, quis nostrud ex</span>
+                          <h2 class="h2__inset1">Tres Lagunas Video</h2>
+                          <span class="h2_span"> Un lugar que heredaron los lacandones, descendientes directos de los mayas. Se trata del centro ecoturístico Tres Lagunas, ubicado en plena selva lacandona en el estado de Chiapas.  </span>
                       </div>
-                      <a href="http://www.youtube.com/embed/2kodXWejuy0?rel=0" class="various iframe btn-play"><i class="fa fa-play"></i></a>
-                      <h3 class="h3__inset1">watch the video</h3>
+                      <a href="//www.youtube.com/embed/6nspuNybsW0" class="various iframe btn-play"><i class="fa fa-play"></i></a>
+                      <h3 class="h3__inset1">Ver video</h3>
                   </div>
               </div>
           </div>
