--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               <div class="row">
                   <div class="grid_12">
                       <div class="h2 wow bounceInUp">
-                          <h2>gallery</h2>
-                          <span class="h2_span">Ut wisi enim ad minim veniam, quis nostrud ex</span>
+                          <h2>GALERÍA</h2>
+                          <span class="h2_span">Echa un vistazo a la flora, fauna y paisajes naturales que el Santuario del Cocodrilo Tres Lagunas tiene para ti, una experiencia única en la Selva Lacandona, Chiapas.</span>
                       </div>
                   </div>
               </div>
