--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                       <div class="post2 wow bounceInDown">
                           <img src="images/page1_img1.png" alt=""/>
                           <div class="content">
-                              <h3>lorem ipsum dolo</h3>
-                              <p>Quisi enim ad minim veniam,</p>
-                              <a class="btn-default" href="#">more info</a>
+                              <h3>El Tucán Que Vive en Libertad</h3>
+                              <p>Siempre regresa a la selva</p>
+                              <a class="btn-default" href="#">Leer Más</a>
                           </div>
                       </div>
                   </div>
@@ -225,9 +225,9 @@
                       <div class="post2 wow bounceInUp">
                           <img src="images/page1_img2.png" alt=""/>
                           <div class="content">
-                              <h3>Claritas est etiam</h3>
-                              <p>Ut wisi enim ad minim veniam,</p>
-                              <a class="btn-default" href="#">more info</a>
+                              <h3>El Matapalo</h3>
+                              <p>Conoce el por qué de su nombre</p>
+                              <a class="btn-default" href="#">Leer Más</a>
                           </div>
                       </div>
                   </div>
@@ -235,9 +235,9 @@
                       <div class="post2 wow bounceInDown">
                           <img src="images/page1_img3.png" alt=""/>
                           <div class="content">
-                              <h3>Eodem modo</h3>
-                              <p>Ut wisi enim ad minim veniam,</p>
-                              <a class="btn-default" href="#">more info</a>
+                              <h3>Un Guardían de la Selva </h3>
+                              <p>Su nombre es Pablo Chankin</p>
+                              <a class="btn-default" href="#">Leer Más</a>
                           </div>
                       </div>
                   </div>
@@ -245,9 +245,9 @@
                       <div class="post2 wow bounceInUp">
                           <img src="images/page1_img4.png" alt=""/>
                           <div class="content">
-                              <h3>Ut wisi enim</h3>
-                              <p>Ut wisi enim ad minim veniam,</p>
-                              <a class="btn-default" href="#">more info</a>
+                              <h3>Campamento Natura 2014</h3>
+                              <p>Fotografía en la selva</p>
+                              <a class="btn-default" href="#">Leer Más</a>
                           </div>
                       </div>
                   </div>
