--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <a href="index.html"><img src="images/big-logo.png" alt=""/></a>
                              <h5>Tres Lagunas</h5>
                             <span>Selva Lacandona, Chiapas</span>
-                            <a class="btn__big" href="#">get started</a>
+                            <a class="btn__big" href="#">Inicio</a>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                             <a href="index.html"><img src="images/big-logo.png" alt=""/></a>
                             <h5>Tres Lagunas</h5>
                             <span>Selva Lacandona, Chiapas</span>
-                            <a class="btn-default btn__big" href="#">get started</a>
+                            <a class="btn-default btn__big" href="#">Inicio</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             <a href="index.html"><img src="images/big-logo.png" alt=""/></a>
                             <h5>Tres Lagunas</h5>
                             <span>Selva Lacandona, Chiapas</span>
-                            <a class="btn-default btn__big" href="#">get started</a>
+                            <a class="btn-default btn__big" href="#">Inicio</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
           <div class="grid_12">
        <nav>
                         <ul class="sf-menu">
-                            <li><a href="index.html">Inicio</a></li>
+                            <li class="current"><a href="index.html">Inicio</a></li>
                             <li><a href="index-1.html">Nosotros</a>
                                 <ul>
                                     <li><a href="#">Información General</a></li>
@@ -149,7 +149,7 @@
                                     <li><a href="#">Santuario</a></li>
                                 </ul>
                             </li>
-                            <li class="current"><a href="index-2.html">Actividades</a></li>
+                            <li ><a href="index-2.html">Actividades</a></li>
                             <li><a href="index-3.html">Noticias</a></li>
                             <li><a href="index-4.html">Reservación</a></li>
                             <li><a href="index-5.html">Contacto</a></li>
@@ -260,8 +260,8 @@
               <div class="row">
                   <div class="grid_12">
                       <div class="h2 wow bounceInUp">
-                          <h2>gallery</h2>
-                          <span class="h2_span">Ut wisi enim ad minim veniam, quis nostrud ex</span>
+                          <h2>Galería Fotográfica</h2>
+                          <span class="h2_span">Te mostramos el santuario en imágenes</span>
                       </div>
                   </div>
               </div>
@@ -590,7 +590,7 @@
                         <div
                                 class="contact-info_icon"><img src="images/phone-icon.png" class="contact-info_icon_phone"
                                                                                    alt=""/></div>
-                        <span class="contact-info_description">+1 800 559 6580</span>
+                        <span class="contact-info_description">961 652 02 43</span>
                     </div>
                 </div>
                 <div class="grid_3">
@@ -598,12 +598,12 @@
                         <span class="contact-info_header">email</span>
                         <div class="contact-info_icon"><img src="images/mail-icon.png" class="contact-info_icon_email" alt=
                                 ""/></div>
-                        <a class="contact-info_simple-link">mail@demolink.org</a>
+                        <a class="contact-info_simple-link">contacto@treslagunas.com.mx</a>
                     </div>
                 </div>
                 <div class="grid_3">
                     <div class="contact-info socials">
-                        <span class="contact-info_header">follow</span>
+                        <span class="contact-info_header">Síguenos</span>
                         <div
                                 class="contact-info_icon"><img src="images/facebook-icon.png" class="contact-info_icon_facebook" alt=""/><img src="images/twitter-icon.png" class="contact-info_icon_twitter" alt=""/></div>
                         <a class="contact-info_simple-link">Facebook</a><a class="contact-info_simple-link">Twitter</a>
@@ -611,7 +611,7 @@
                 </div>
                 <div class="grid_3">
                     <div class="contact-info">
-                        <span class="contact-info_header">visit</span>
+                        <span class="contact-info_header">visita</span>
                         <div
                                 class="contact-info_icon"><img src="images/visit-icon.png" class="contact-info_icon_visit"
                                                                                     alt=""/></div>
