--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                   </div>
                   <div class="grid_4">
                       <div class="h2 wow bounceInUp">
-                          <h2>Tips - selva lacandona</h2>
+                          <h2>Tips - selva</h2>
                           <span class="h2_span">¿Qué puedo hacer? </span>
                       </div>
                       <div id="accordion" class="wow bounceInDown">
@@ -559,8 +559,8 @@
                   </div>
                   <div class="grid_4">
                       <div class="h2 wow bounceInUp">
-                          <h2>CHIAPAS APPVENTURE</h2>
-                          <span class="h2_span">Turismo de Aventura</span>
+                          <h2>Chiapasappventure</h2>
+                          <span class="h2_span">Chiapas Appventure</span>
                       </div>
                       <div class="post3">
                       Conoce más acerca de los lugares turísticos de aventura que el majestuoso estado de Chiapas tiene para tí.
