--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
             <div class="row">
                 <div class="grid_3">
                     <div class="contact-info">
-                        <span class="contact-info_header">call</span>
+                        <span class="contact-info_header">NÚm. telefÓnico</span>
                         <div
                                 class="contact-info_icon"><img src="images/phone-icon.png" class="contact-info_icon_phone"
                                                                                    alt=""/></div>
