--- a/index-2.html
+++ b/index-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Destinations</title>
+    <title>Actividades</title>
     <meta charset="utf-8">
     <meta name = "format-detection" content = "telephone=no" />
     <link rel="icon" href="images/favicon_.ico" type="image/x-icon">
@@ -70,7 +70,7 @@
                         <div class="clearfix"></div>
                     </nav>
                     <form id="search" action="search.php" method="GET" accept-charset="utf-8">
-                        <input type="text" name="s" placeholder="Enter word" />
+                        <input type="text" name="s" placeholder="Buscar" />
                         <a onclick="document.getElementById('search').submit()"><div class="search_icon"></div></a>
                     </form>
                 </div>
