--- a/index-6.html
+++ b/index-6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Privacy policy</title>
+    <title>Políticas de Privacidad</title>
     <meta charset="utf-8">
     <meta name = "format-detection" content = "telephone=no" />
     <link rel="icon" href="images/favicon_.ico" type="image/x-icon">
@@ -62,7 +62,7 @@
                                     <li><a href="#">Santuario</a></li>
                                 </ul>
                             </li>
-                            <li class="current"><a href="index-2.html">Actividades</a></li>
+                            <li><a href="index-2.html">Actividades</a></li>
                             <li><a href="index-3.html">Noticias</a></li>
                             <li><a href="index-4.html">Reservación</a></li>
                             <li><a href="index-5.html">Contacto</a></li>
@@ -70,7 +70,7 @@
                         <div class="clearfix"></div>
                     </nav>
                     <form id="search" action="search.php" method="GET" accept-charset="utf-8">
-                        <input type="text" name="s" placeholder="Enter word" />
+                        <input type="text" name="s" placeholder="Buscar" />
                         <a onclick="document.getElementById('search').submit()"><div class="search_icon"></div></a>
                     </form>
                 </div>
