--- a/index-1.html
+++ b/index-1.html
@@ -88,8 +88,8 @@
             <div class="row">
                 <div class="grid_12">
                     <div class="h2">
-                        <h2>responsible and sustainable travel</h2>
-                        <span class="h2_span">Weitas est etiam procesim veniam</span>
+                        <h2>una puerta a la selva lacandona</h2>
+                        <span class="h2_span">Santuario del Cocodrilo "Tres Lagunas"</span>
                     </div>
                 </div>
             </div>
@@ -97,8 +97,8 @@
                 <div class="grid_12">
                     <div class="post3">
                         <img src="images/page2_img1.png" alt=""/>
-                        <p class="post_header">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-                        <p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humani. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                        <p class="post_header">Lo lacandones son descendientes directos de los mayas, de quienes heredaron esta selva la cual hoy cuidan y muestran gustosamente a quienes guesten conocerla.</p>
+                        <p>Pablo Chankin y familia son herederos de esta porción de selva  la cual denominaron; Santuario del cocodrilo "Tres Lagunas".  Un lugar donde las lagunas parecieran espejos que reflejan la grandeza de la selva lacandona coloreada en tonos verdes y azules que inspiran un momento de paz en el cual cada uno de tus sentidos no podrá percibir otra cosa que no sea naturaleza.  En este lugar podrás caminar en diversos senderos  y revivir a cada paso las caminatas que hacían los mayas y lacandones cuando salían de caza a buscar la supervivencia de sus familias.   </p>
                         <a class="btn-default" href="#">more</a>
                     </div>
                 </div>
