--- a/index-5.html
+++ b/index-5.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Contacto</title>
@@ -90,22 +90,22 @@
         <div class="row">
             <div class="grid_12">
                 <div class="h2 wow bounceInUp">
-                    <h2>how to find us</h2>
-                    <span class="h2_span">Weitas est etiam procesim veniam</span>
+                    <h2>COMO ENCONTRARNOS</h2>
+                    <span class="h2_span">UBICANOS MEDIANTE GOOGLE MAPS</span>
                 </div>
             </div>
         </div>
         <div class="row wow bounceInDown">
             <div class="grid_12">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24214.807650104907!2d-73.94846048422478!3d40.65521573400813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1395650655094" style="border:0" class="google-map__contact"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3819.6036810537926!2d-91.10653099999999!3d16.796382!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85f4a468a7f6159f%3A0x3ab4c27e9be75963!2sEcolodge+Tres+Lagunas+-+Selva+Lacandona!5e0!3m2!1ses!2smx!4v1415841870438" width="650" height="650" frameborder="0" style="border:0"></iframe>
             </div>
         </div>
         <div class="row">
             <div class="grid_9">
                 <div class="post3">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                <p>Google Maps es un servidor de aplicaciones de mapas en la web que pertenece a Google. Ofrece imágenes de mapas desplazables, así como fotografías por satélite del mundo e incluso la ruta entre diferentes ubicaciones</p>
                 <p>
-                    Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
+		    Una de las dificultades con las que se cuenta en ocasiones es el poder ubicar el destino al que se desea llegar, TRES LAGUNAS es uno de los casos ya que es una zona de poca circulacion, pero para ello ocuparemos una valiosa herramienta como lo es Google Maps</p>
                 </div>
             </div>
             <div class="grid_3">
@@ -117,7 +117,7 @@
                             <span class="numbers">Freephone:</span><span>+1 800 559 6580</span><br>
                             <span class="numbers">Telephone:</span><span>+1 800 603 6035</span><br>
                             <span class="numbers">FAX:</span><span>+1 800 889 9898</span><br>
-                            <span class="mail">E-mail: </span><span><a href="#" class="privacy-demolink">mail@demolink.org</a></span><br>
+                            <span class="mail">E-mail: </span><span><a href="#" class="privacy-demolink">CONTACTO@TRESLAGUNAS.COM.MX</a></span><br>
                         </dt>
                         <dd></dd>
                     </dl>
@@ -127,8 +127,8 @@
         <div class="row">
             <div class="grid_12">
                 <div class="h2 wow bounceInLeft">
-                    <h2>contact form</h2>
-                    <span class="h2_span">Weitas est etiam procesim veniam</span>
+                    <h2>FORMULARIO DE CONTACTO</h2>
+                    <span class="h2_span">LLENAR CORRECTAMENTE CADA CAMPO</span>
                 </div>
             </div>
         </div>
@@ -140,17 +140,17 @@
                         <div class="row">
                             <div class="grid_6">
                                 <label class="name">
-                                    <input type="text" name="name" placeholder="Name:" data-constraints="@Required @JustLetters" />
+                                    <input type="text" name="Name" placeholder="NOMBRE:" data-constraints="@Required @JustLetters" />
                                     <span class="empty-message">*This field is required.</span>
                                 </label>
                                 <label class="email">
-                                    <input type="text" name="email" placeholder="E-mail:" value=""
+                                    <input type="text" name="email" placeholder="CORREO ELECTRONICO:" value=""
                                            data-constraints="@Required @Email" />
                                     <span class="empty-message">*This field is required.</span>
                                     <span class="error-message">*This is not a valid email.</span>
                                 </label>
                                 <label class="phone">
-                                    <input type="text" name="phone" placeholder="Phone:" value=""
+                                    <input type="text" name="Phone" placeholder="TELEFONO:" value=""
                                            data-constraints="@Required @JustNumbers" />
                                     <span class="empty-message">*This field is required.</span>
                                     <span class="error-message">*This is not a valid phone.</span>
@@ -160,7 +160,7 @@
 
                             <div class="grid_6">
                                 <label class="message">
-                                    <textarea name="message" placeholder="Message:" data-constraints='@Required @Length(min=20,max=999999)'></textarea>
+                                    <textarea name="message" placeholder="MENSAGE:" data-constraints='@Required @Length(min=20,max=999999)'></textarea>
                                     <span class="empty-message">*This field is required.</span>
                                     <span class="error-message">*The message is too short.</span>
                                 </label>
@@ -169,7 +169,7 @@
                             <!-- <label class="recaptcha"><span class="empty-message">*This field is required.</span></label> -->
                             <div class="grid_12">
                                 <div class="contact-form-buttons">
-                                    <a href="#" data-type="submit" class="btn-default">send message</a>
+                                    <a href="#" data-type="submit" class="btn-default">ENVIAR</a>
                                 </div>
                             </div>
                         </div>
