--- a/index-3.html
+++ b/index-3.html
@@ -70,7 +70,7 @@
                         <div class="clearfix"></div>
                     </nav>
                     <form id="search" action="search.php" method="GET" accept-charset="utf-8">
-                        <input type="text" name="s" placeholder="Enter word" />
+                        <input type="text" name="s" placeholder="Buscar" />
                         <a onclick="document.getElementById('search').submit()"><div class="search_icon"></div></a>
                     </form>
                 </div>
