--- a/index-1.html
+++ b/index-1.html
@@ -99,7 +99,6 @@
                         <img src="images/page2_img1.png" alt=""/>
                         <p class="post_header">Lo lacandones son descendientes directos de los mayas, de quienes heredaron esta selva la cual hoy cuidan y muestran gustosamente a quienes guesten conocerla.</p>
                         <p>Pablo Chankin y familia son herederos de esta porción de selva  la cual denominaron; Santuario del cocodrilo "Tres Lagunas".  Un lugar donde las lagunas parecieran espejos que reflejan la grandeza de la selva lacandona coloreada en tonos verdes y azules que inspiran un momento de paz en el cual cada uno de tus sentidos no podrá percibir otra cosa que no sea naturaleza.  En este lugar podrás caminar en diversos senderos  y revivir a cada paso las caminatas que hacían los mayas y lacandones cuando salían de caza a buscar la supervivencia de sus familias.   </p>
-                        <a class="btn-default" href="#">more</a>
                     </div>
                 </div>
             </div>
@@ -111,8 +110,8 @@
             <div class="row">
                 <div class="grid_12">
                     <div class="h2">
-                        <h2>we believe in</h2>
-                        <span class="h2_span">Ut wisi enim ad minim veniam, quis nostrud ex</span>
+                        <h2>CONFIAMOS EN LA NATURALEZA</h2>
+                        <span class="h2_span">La vida en la selva lacandona.</span>
                     </div>
                 </div>
             </div>
@@ -143,9 +142,8 @@
             <div class="row">
                 <div class="grid_12">
                     <div class="h2">
-                        <h2 class="h2__inset1">our team</h2>
-                        <span class="h2_span"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu<br>feugiat nulla facilisis at vim ven<br>
-iam, quis nostrud ex</span>
+                        <h2 class="h2__inset1">NUESTRO EQUIPO</h2>
+                        <span class="h2_span"> Más que un equipo, somos una familia. Entonces decimos que una familia debe ser un gran equipo para que algo pueda funcionar correctamente. Inculcar a los hijos todos aquellos valores para la preservación de Tres Lagunas. el respeto a la naturaleza y amor a lo que nos rodea.</span>
                     </div>
                 </div>
             </div>
@@ -153,25 +151,25 @@ iam, quis nostrud ex</span>
                 <div class="grid_3">
                     <div class="post5">
                         <a href="#"><img src="images/page2_img2.png" alt=""/></a>
-                        <h3 class="h3__inset1"><a href="#">mark johnson</a></h3>
+                        <h3 class="h3__inset1"><a href="#">PABLO CHANKÍN</a></h3>
                     </div>
                 </div>
                 <div class="grid_3">
                     <div class="post5">
                         <a href="#"><img src="images/page2_img3.png" alt=""/></a>
-                        <h3 class="h3__inset1"><a href="#">laura stegner</a></h3>
+                        <h3 class="h3__inset1"><a href="#">RODRIGO CHANKÍN</a></h3>
                     </div>
                 </div>
                 <div class="grid_3">
                     <div class="post5">
                         <a href="#"><img src="images/page2_img4.png" alt=""/></a>
-                        <h3 class="h3__inset1"><a href="#">tom james</a></h3>
+                        <h3 class="h3__inset1"><a href="#">EDUARDO CHANKÍN</a></h3>
                     </div>
                 </div>
                 <div class="grid_3">
                     <div class="post5">
                         <a href="#"><img src="images/page2_img5.png" alt=""/></a>
-                        <h3 class="h3__inset1"><a href="#">eva savits</a></h3>
+                        <h3 class="h3__inset1"><a href="#">ADRIÁN CHANKÍN</a></h3>
                     </div>
                 </div>
             </div>
