--- a/index-1.html
+++ b/index-1.html
@@ -181,40 +181,35 @@
             <div class="row">
                 <div class="grid_4">
                     <div class="h2">
-                        <h2>mission statement</h2>
-                        <span class="h2_span">Claritas est etiam procesim veniam</span>
+                        <h2>MISIÓN</h2>
+                        <span class="h2_span">Contribuir con el turismo sustentable</span>
                     </div>
                     <div class="post6">
-                        <h3>Pellentesque sed dolor</h3>
-                        <p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                        <ul class="list1">
-                            <li><a href="#">Lorem ipsum dolor sit ametcose ctetue</a></li>
-                            <li><a href="#">Ut pharetra augue nec augue</a></li>
-                            <li><a href="#">Suspendisse velit sed leo</a></li>
-                            <li><a href="#">Nam elit agna,endrerit sit amet</a></li>
-                        </ul>
-                    </div>
+                        <h3>DESARROLLO POTENCIAL DE LA SELVA LACANDONA.</h3>
+                        <p>Coadyuvar al desarrollo del potencial turístico del Estado de Chiapas a través del Santurario del Cocodrilo Tres Lagunas, conservando la naturaleza y cultura, desarrollando proyectos que impulsen el sector turístico de esta población.</p>
+</div>
                 </div>
                 <div class="grid_4">
                     <div class="h2">
-                        <h2>our vision</h2>
-                        <span class="h2_span">Weitas est etiam procesim veniam</span>
+                      <h2>visiÓn</h2>
+                        <span class="h2_span">Ser el #1 de los centros ecoturísticos en la Selva Lacandona.</span>
                     </div>
                     <div class="post3">
-                        <p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio.</p>
-                        <p>Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna.</p>
+                        <p>Pretendemos posicionarnos como el Centro Ecoturístico más destacado por sus actividadesy servicios de calidad en el año 2016.</p>
+                        <p>Aumentar la popularidad de la afluencia turística a Zona Selva a un 50% en el año 2015.</p>
+                        <p>&nbsp;</p>
                     </div>
                 </div>
                 <div class="grid_4">
                     <div class="h2">
-                        <h2>code of ethics</h2>
-                        <span class="h2_span">Est etiam procesim veniam</span>
+                        <h2>VALORES</h2>
+                        <span class="h2_span">Hacer lo correcto</span>
                     </div>
                         <div class="post7">
-                        <span class="post_header2">Nam liber tempor cum</span>
-                        <p>Soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-                        <span class="post_header2">Typi non habent claritatem insitam</span>
-                        <p>Est usus legentis in iis qui facit eorum claritate Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus.</p>
+                        <p><span class="post_header2">Planeación	- Responsabilidad - </span><span class="post_header2">Respeto</span></p>
+                        <p><span class="post_header2">Integración - </span><span class="post_header2">Desarrollo Social</span></p>
+                        <p><span class="post_header2">Superación - </span><span class="post_header2">Solidaridad -</span><span class="post_header2"> Sustentabilidad</span> </p>
+                        <p>&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -237,33 +232,33 @@
                         <div
                                 class="contact-info_icon"><img src="images/phone-icon.png" class="contact-info_icon_phone"
                                                                alt=""/></div>
-                        <span class="contact-info_description">+1 800 559 6580</span>
-                    </div>
+                        <span class="contact-info_description">961 652 02 43</span></div>
                 </div>
                 <div class="grid_3">
                     <div class="contact-info">
                         <span class="contact-info_header">email</span>
                         <div class="contact-info_icon"><img src="images/mail-icon.png" class="contact-info_icon_email" alt=
                                 ""/></div>
-                        <a class="contact-info_simple-link">mail@demolink.org</a>
+                        <a class="contact-info_simple-link">contacto@treslagunas.com.mx</a>
                     </div>
                 </div>
                 <div class="grid_3">
                     <div class="contact-info socials">
-                        <span class="contact-info_header">follow</span>
+                        <span class="contact-info_header">SÍGUENOS                        </span>
                         <div
                                 class="contact-info_icon"><img src="images/facebook-icon.png" class="contact-info_icon_facebook" alt=""/><img src="images/twitter-icon.png" class="contact-info_icon_twitter" alt=""/></div>
                         <a class="contact-info_simple-link">Facebook</a><a class="contact-info_simple-link">Twitter</a>
-                    </div>
+                  </div>
                 </div>
                 <div class="grid_3">
                     <div class="contact-info">
-                        <span class="contact-info_header">visit</span>
+                        <span class="contact-info_header">visitA</span>
                         <div
                                 class="contact-info_icon"><img src="images/visit-icon.png" class="contact-info_icon_visit"
                                                                alt=""/></div>
-                        <span class="contact-info_description">8901 Marmora Road, Glasgow</span>
-                    </div>
+                        <div
+                                class="contact-info_icon"></div>
+                        <span class="contact-info_description">Selva Lacandona, Chiapas.</span></div>
                 </div>
             </div>
         </div>
