--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 </div>
                 <div class="grid_3">
                     <div class="contact-info socials">
-                        <span class="contact-info_header">Síguenos</span>
+                        <span class="contact-info_header">SÍguenos</span>
                         <div
                                 class="contact-info_icon"><img src="images/facebook-icon.png" class="contact-info_icon_facebook" alt=""/><img src="images/twitter-icon.png" class="contact-info_icon_twitter" alt=""/></div>
                         <a class="contact-info_simple-link">Facebook</a><a class="contact-info_simple-link">Twitter</a>
